variables.Variables.scala.code
var nbpas = 0
var dejaFAit = 0
while (!estSurBiscuit()) { avance()
                         nbpas = nbpas +1}
while (dejaFait != nbpas)  {recule()}
